# virtuality

./: CMakeLists.txt  FX.cpp  FX.h  PKGBUILD  README.md  buildQt4.sh  buildQt5.sh  buttons.cpp  config.defaults  config.h  debug.h  docks.cpp  dpi.cpp  dpi.h  draw.h  fixx11h.h  frames.cpp  hacks.cpp  hacks.h  indicators.cpp  init.cpp  input.cpp  macmenu-dbus.h  macmenu.cpp  macmenu.h  makros.h  menus.cpp  pixelmetric.cpp  polish.cpp  progress.cpp  qmake.pro  qsubcmetrics.cpp  revision.cmake  revision.cpp  scrollareas.cpp  shadows.cpp  shadows.h  shapes.cpp  shapes.h  sizefromcontents.cpp  (+16 more)
animator/: aprogress.cpp  aprogress.h  basic.cpp  basic.h  focus.cpp  focus.h  hover.cpp  hover.h  hovercomplex.cpp  hovercomplex.h  hoverindex.cpp  hoverindex.h  tab.cpp  tab.h
config/: CMakeLists.txt  bconfig.cpp  bconfig.h  config.cpp  config.h  config.ui  dialog.h  kdeini.cpp  kdeini.h  main.cpp  uiDemo.ui
